# rigel_local_simulation_plugin

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
rigel_local_simulation_plugin/: __init__.py  plugin.py
tests/: test_rigel_local_simulation_plugin.py
