[tool.poetry]
name = "rigel_local_simulation_plugin"
version = "0.1.0"
description = "A plugin for Rigel to locally run a containerized ROS application."
authors = ["Pedro Miguel Melo <pedro.m.melo@inesctec.pt>"]

[tool.poetry.dependencies]
python = "^3.8"
rigelcore = {git = "ssh://git@gitlab.inesctec.pt/pedro.m.melo/rigelcore"}
docker = "^5.0.3"
roslibpy = "^1.3.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
mypy = "^0.931"
nox = "^2022.1.7"
pre-commit = "^2.17.0"
pytest = "^5.2"
twine = "^3.8.0"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"